post-season commit

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -16,4 +16,8 @@ dependencies {
 }
 android {
     buildToolsVersion '26.0.2'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
